maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: not found: value getmondeLargeur
  for(i<- 0 to getmondeLargeur()-1){
               ^JediEscaper:20: error: not found: value getmondeHauteur
    for(j<-0 to getmondeHauteur()-1){
                ^JediEscaper:21: error: not found: value x
      if(aBiscuit(x,y)){
                  ^JediEscaper:21: error: not found: value y
      if(aBiscuit(x,y)){
                    ^JediEscaper:27: error: not found: value posX
  setIndication(posX,posY,0)
                ^JediEscaper:27: error: not found: value posY
  setIndication(posX,posY,0)
                     ^JediEscaper:31: error: value t is not a member of Int
      for(y<- 0 t getMondeHauteur()){
                ^